# genanki-next

./: .gitignore  pyproject.toml  pyrightconfig.json  pytest.toml
docs/proto/: deck_config-config.org  decks-common.org  decks-kind.org  templates-config.org
docs/tables/: cards.org  deck_config.org  decks.org  fields.org  notes.org  revlog.org  templates.org
reference/: README.org
reference/proto/: decks-filtered.org  decks-normal.org  fields-config.org  notetypes-config.org
reference/tables/: col.org  config.org  graves.org  notetypes.org  tags.org
