[project]
name = "genanki-next"
version = "0.1.0"
description = "Library for programmatically generating Anki decks with schema v18 support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SOV710", email = "chris916911179@outlook.com" },
]
keywords = ["anki", "education", "flashcards", "spaced-repetition"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "protobuf>=5.28.0",
  "pydantic>=2.9.0",
  "zstandard>=0.23.0",
]

[project.urls]
Changelog = "https://github.com/SOV710/genanki-next/blob/main/CHANGELOG.md"
Homepage = "https://github.com/SOV710/genanki-next"
Repository = "https://github.com/SOV710/genanki-next"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=3.5.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.6.0",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src"]
omit = ["*/proto/generated/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genanki-next"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/proto",
  "/README.md",
  "/CHANGELOG.md",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "genanki-next.proto.generated.*"
ignore_errors = true

[tool.pytest]
addopts = [
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov=genanki-next",
  "--strict-markers",
]
markers = [
  "integration: marks tests as integration tests",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "RUF",  # Ruff-specific rules
  "PTH",  # flake8-use-pathlib
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["ARG"]  # unused arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["genanki-next"]
