[project]
name = "genanki-next"
version = "0.1.0"
description = "Library for programmatically generating Anki decks with schema v18 support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SOV710", email = "chris916911179@outlook.com" },
]
keywords = ["anki", "education", "flashcards", "spaced-repetition"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "protobuf>=5.28.0",
  "pydantic>=2.9.0",
  "zstandard>=0.23.0",
]

[project.urls]
Changelog = "https://github.com/SOV710/genanki-next/blob/main/CHANGELOG.md"
Homepage = "https://github.com/SOV710/genanki-next"
Repository = "https://github.com/SOV710/genanki-next"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=3.5.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.6.0",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src"]
omit = ["*/proto/generated/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genanki-next"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/proto",
  "/README.md",
  "/CHANGELOG.md",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "genanki-next.proto.generated.*"
ignore_errors = true

[tool.pytest]
addopts = [
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov=genanki-next",
  "--strict-markers",
]
markers = [
  "integration: marks tests as integration tests",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
# Target Python 3.10+ syntax
target-version = "py310"
# Line length to match Black's default
line-length = 100
# Directories to consider as first-party imports
src = ["src", "tests"]
# Exclude common non-source directories
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM",  # flake8-simplify
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "RUF",  # Ruff-specific rules
  "PERF",  # Perflint performance hints
  "FURB",  # refurb modernization suggestions
  "LOG",  # flake8-logging
  "G",  # flake8-logging-format
]
# Disable specific rules that conflict with formatter or common patterns
ignore = [
  "E501",  # Line too long (handled by formatter)
  "B008",  # Function call in default argument (used by FastAPI, Pydantic)
  "RUF001",  # Ambiguous unicode character (allow strings in non-English)
  "RUF002",  # Ambiguous unicode in docstring
  "RUF003",  # Ambiguous unicode in comment
]
# Allow autofix for all enabled rules when `--fix` is provided
fixable = ["ALL"]
unfixable = []
# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = [
  "F401",  # Unused imports (public API exposure)
  "F403",  # Star imports (import *)
]
"tests/**/*.py" = [
  "ARG",  # Unused function arguments (fixtures)
  "S101",  # Use of assert (required in tests)
  "PLR2004",  # Magic value in comparison
]
"scripts/**/*.py" = [
  "T201",  # Print statements allowed in scripts
]

[tool.ruff.lint.isort]
# Sort imports according to PEP 8
known-first-party = ["genanki"]
force-single-line = false
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like b = [] in function definitions
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-type-checking]
# Enforce type checking best practices
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.pylint]
# Maximum number of arguments for a function
max-args = 6
# Maximum number of branches in a function
max-branches = 12
# Maximum number of return statements
max-returns = 6
# Maximum number of statements
max-statements = 50

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use Unix line endings
line-ending = "auto"
# Automatically detect magic trailing comma and respect it
skip-magic-trailing-comma = false
# Format docstrings
docstring-code-format = true
docstring-code-line-length = 88
