[project]
name = "genanki-next"
version = "0.1.0"
description = "Library for programmatically generating Anki decks with schema v18 support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SOV710", email = "chris916911179@outlook.com" },
]
keywords = ["anki", "education", "flashcards", "spaced-repetition"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "protobuf>=5.28.0",
  "pydantic>=2.9.0",
  "zstandard>=0.23.0",
]

[project.urls]
Changelog = "https://github.com/SOV710/genanki-next/blob/main/CHANGELOG.md"
Homepage = "https://github.com/SOV710/genanki-next"
Repository = "https://github.com/SOV710/genanki-next"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=3.5.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.6.0",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
# Measure coverage for source code only
source = ["src"]
branch = true
parallel = true
# Exclude generated and vendored code
omit = [
  "*/proto/generated/*",
  "*/tests/*",
  "*/__pycache__/*",
  "*/site-packages/*",
]
# Enable plugin support
plugins = ["coverage.toml"]

[tool.coverage.report]
# Output format
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
# Fail if coverage is below threshold
fail_under = 80
# Ignore these patterns when reporting
exclude_lines = [
  # Standard pragma
  "pragma: no cover",
  # Defensive programming
  "raise AssertionError",
  "raise NotImplementedError",
  "raise RuntimeError",
  # Type checking
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@overload",
  # Debugging
  "if __name__ == .__main__.:",
  "if DEBUG:",
  # Abstract methods
  "@(abc\\.)?abstractmethod",
  "class .*\\bProtocol\\):",
  # Representation methods (low value to test)
  "def __repr__",
  "def __str__",
]
# Partial coverage branches to ignore
partial_branches = [
  "pragma: no branch",
  "if not TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.hatch.build.targets.wheel]
packages = ["src/genanki_next"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/docs",
  "/tests",
  "/proto",
  "/README.md",
  "/CHANGELOG.md",
]

[tool.mypy]
# Python version to target
python_version = "3.10"
# Import discovery
files = ["src", "tests"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
# Platform configuration
platform = "linux"
# Disallow dynamic typing (strictness settings)
disallow_any_unimported = false  # Allow Any from untyped imports
disallow_any_expr = false  # Too strict for most projects
disallow_any_decorated = false  # Allow Any in decorators
disallow_any_explicit = false  # Allow explicit Any annotations
disallow_any_generics = true  # Require type parameters for generics
disallow_subclassing_any = true  # Prevent subclassing Any
# Untyped definitions and calls
disallow_untyped_calls = true  # Functions with type hints can only call typed functions
disallow_untyped_defs = true  # All functions must have type annotations
disallow_incomplete_defs = true  # All arguments must be annotated
check_untyped_defs = true  # Type check even untyped function bodies
disallow_untyped_decorators = true  # Decorators must be typed
# None and Optional handling
strict_optional = true  # Enable strict Optional checks
no_implicit_optional = true  # Disallow implicit Optional (deprecated arg = None)
# Warnings
warn_redundant_casts = true  # Warn about unnecessary casts
warn_unused_ignores = true  # Warn about unused type: ignore comments
warn_no_return = true  # Warn about missing return statements
warn_return_any = true  # Warn about returning Any from typed function
warn_unreachable = true  # Warn about unreachable code
warn_unused_configs = true  # Warn about unused config options
# Error output
show_column_numbers = true  # Show column numbers in error messages
show_error_context = true  # Show context around error location
pretty = true  # Use color and formatting in output
color_output = true  # Enable colored output
error_summary = true  # Show summary of all errors
# Strictness flags (advanced)
strict_equality = true  # Prohibit equality between incompatible types
strict_concatenate = true  # Type check string concatenation strictly
allow_redefinition = false  # Disallow variable redefinition with different type
local_partial_types = false  # Require full types in local variables
implicit_reexport = false  # Require explicit __all__ or import ... as
# Configuring warnings
warn_incomplete_stub = true  # Warn about missing type stubs
# Miscellaneous
plugins = [
  "pydantic.mypy",  # Pydantic plugin for model validation
]

# Per-module configuration options
[[tool.mypy.overrides]]
# Ignore errors in generated protobuf code
module = "genanki-next.proto.generated.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Allow more flexibility in test files
module = "tests.*"
disallow_untyped_decorators = false  # pytest fixtures may be untyped
disallow_untyped_defs = false  # Test functions can be less strict
warn_return_any = false  # Tests may return Any

[[tool.mypy.overrides]]
# Third-party libraries without stubs
module = [
  "zstandard.*",
  "google.protobuf.*",
]
ignore_missing_imports = true

# Pydantic plugin configuration
[tool.pydantic-mypy]
init_forbid_extra = true  # Forbid extra fields in __init__
init_typed = true  # Require types in __init__
warn_required_dynamic_aliases = true  # Warn about required dynamic aliases
warn_untyped_fields = true  # Warn about untyped model fields

[tool.pytest]
# Default command-line options
addopts = [
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov-report=xml",
  # Coverage options
  "--cov=genanki_next",
  # Performance
  "--durations=10",  # Show 10 slowest tests
  "--strict-config",  # Error on config issues
  "--strict-markers",  # Error on unknown markers
  # Warnings
  "--strict-xfail",  # xfail tests that pass will fail the suite
  # Output options
  "--tb=short",  # Shorter traceback format
  "-W error",  # Turn warnings into errors
  "-ra",  # Show summary of all test outcomes
]
# Console output style
console_output_style = "progress"
# Doctest configuration
doctest_optionflags = [
  "ELLIPSIS",
  "IGNORE_EXCEPTION_DETAIL",
  "NORMALIZE_WHITESPACE",
]
faulthandler_exit_on_timeout = false
# Timeout for tests (requires pytest-timeout plugin)
faulthandler_timeout = 300
# Filter warnings
filterwarnings = [
  "error",  # Turn all warnings into errors
  "ignore::DeprecationWarning:pkg_resources",  # Ignore pkg_resources deprecations
  "ignore::PendingDeprecationWarning",  # Ignore pending deprecations
]
junit_duration_report = "call"
# JUnit XML report configuration
junit_family = "xunit2"
junit_log_passing_tests = true
junit_logging = "all"
junit_suite_name = "genanki_next"
# Disable auto-indentation of multiline log messages
log_auto_indent = false
# Enable live logging during test execution
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_level = "INFO"
log_date_format = "%Y-%m-%d %H:%M:%S"
# File logging configuration
log_file = "logs/pytest.log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)d - %(message)s"
log_file_level = "DEBUG"
log_file_mode = "w"
# Captured log format (displayed on test failure)
log_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_level = "INFO"
# Test markers for categorizing tests
markers = [
  "database: Tests requiring database setup",
  "integration: Integration tests involving multiple components",
  "network: Tests requiring network access",
  "slow: Tests that take significant time (>1s)",
  "unit: Fast isolated unit tests (default)",
]
# Minimum pytest version required
minversion = "9.0"
# Avoid recursing into these directories during test collection
norecursedirs = [
  "*.egg",
  ".*",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "docs",
  "node_modules",
  "proto",
  "venv",
]
python_classes = ["Test*"]
# Test discovery patterns
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
# Add source directory to Python path for imports
pythonpath = ["src"]
# Required plugins
required_plugins = [
  "pytest-cov>=4.1.0",
]
# Directories to search for tests
testpaths = ["tests"]
tmp_path_retention_count = "3"
# Temporary directory retention
tmp_path_retention_policy = "failed"
# Truncation limits for assertion messages
truncation_limit_chars = 640
truncation_limit_lines = 8
# Assertion output configuration
verbosity_assertions = "auto"
verbosity_test_cases = "auto"

[tool.ruff]
# Target Python 3.10+ syntax
target-version = "py310"
# Line length to match Black's default
line-length = 100
# Directories to consider as first-party imports
src = ["src", "tests"]
# Exclude common non-source directories
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM",  # flake8-simplify
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "RUF",  # Ruff-specific rules
  "PERF",  # Perflint performance hints
  "FURB",  # refurb modernization suggestions
  "LOG",  # flake8-logging
  "G",  # flake8-logging-format
]
# Disable specific rules that conflict with formatter or common patterns
ignore = [
  "E501",  # Line too long (handled by formatter)
  "B008",  # Function call in default argument (used by FastAPI, Pydantic)
  "RUF001",  # Ambiguous unicode character (allow strings in non-English)
  "RUF002",  # Ambiguous unicode in docstring
  "RUF003",  # Ambiguous unicode in comment
]
# Allow autofix for all enabled rules when `--fix` is provided
fixable = ["ALL"]
unfixable = []
# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = [
  "F401",  # Unused imports (public API exposure)
  "F403",  # Star imports (import *)
]
"tests/**/*.py" = [
  "ARG",  # Unused function arguments (fixtures)
  "S101",  # Use of assert (required in tests)
  "PLR2004",  # Magic value in comparison
]
"scripts/**/*.py" = [
  "T201",  # Print statements allowed in scripts
]

[tool.ruff.lint.isort]
# Sort imports according to PEP 8
known-first-party = ["genanki_next"]
force-single-line = false
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like b = [] in function definitions
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-type-checking]
# Enforce type checking best practices
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.pylint]
# Maximum number of arguments for a function
max-args = 6
# Maximum number of branches in a function
max-branches = 12
# Maximum number of return statements
max-returns = 6
# Maximum number of statements
max-statements = 50

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use Unix line endings
line-ending = "auto"
# Automatically detect magic trailing comma and respect it
skip-magic-trailing-comma = false
# Format docstrings
docstring-code-format = true
docstring-code-line-length = 88
